# ideation-agentic-system

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml  threads.db
agents/career/: __init__.py  graph.py  prompts.py
agents/ideation/: __init__.py  graph.py  memory.py
agents/tracker/: __init__.py  scorer.py
discord_agent/: calendar_client.py  config.py  graph.py  llm.py  main.py  memory.py  scorer_prompt.txt  store.py  system_prompt.txt  tools.py  tracker.py
discord_bot/: __init__.py  config.py  main.py
mcp_server/: cli.py  server.py
shared/: brief.py  calendar_client.py  llm.py  store.py
tools/: __init__.py  build.py  document.py  github.py  ocr.py  web_search.py
